// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox test should errored with disabled classes 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.c2 {
  position: relative;
  width: 1rem;
  height: 1rem;
  border: 1px solid #334155;
  background: #0f172a;
  overflow: hidden;
  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
  border-radius: 0.375rem;
  border-color: #e11d48;
}

.c5 {
  background: #0f172a;
  width: 100%;
  height: 100%;
  position: absolute;
}

input:checked ~ .c4 {
  background: #e11d48;
}

.c0:hover input:checked ~ .c4 {
  background: #e11d48;
}

.c7 svg {
  width: 16px;
  height: 16px;
  color: transparent;
  z-index: 10;
  position: relative;
}

.c0 input:checked ~ .c6 svg {
  color: #0f172a;
}

.c0:hover .c6 svg {
  color: #e11d48;
}

.c3 {
  display: none;
}

<div>
  <label
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <input
        class="c3"
        type="checkbox"
      />
      <div
        class="c4 c5"
      />
      <div
        class="c6 c7"
      >
        <svg
          aria-hidden="true"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.5 12.75 6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.c2 {
  position: relative;
  width: 1rem;
  height: 1rem;
  border: 1px solid #334155;
  background: #0f172a;
  overflow: hidden;
  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
  border-radius: 0.375rem;
}

.c5 {
  background: #0f172a;
  width: 100%;
  height: 100%;
  position: absolute;
}

input:checked ~ .c4 {
  background: #4f46e5;
}

.c0:hover input:checked ~ .c4 {
  background: #4f46e5;
}

.c7 svg {
  width: 16px;
  height: 16px;
  color: transparent;
  z-index: 10;
  position: relative;
}

.c0 input:checked ~ .c6 svg {
  color: #0f172a;
}

.c0:hover .c6 svg {
  color: #4f46e5;
}

.c3 {
  display: none;
}

<div>
  <label
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <input
        class="c3"
        type="checkbox"
      />
      <div
        class="c4 c5"
      />
      <div
        class="c6 c7"
      >
        <svg
          aria-hidden="true"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.5 12.75 6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render with disabled classes 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.c1 > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.c2 {
  position: relative;
  width: 1rem;
  height: 1rem;
  border: 1px solid #334155;
  background: #0f172a;
  overflow: hidden;
  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
  border-radius: 0.375rem;
}

.c5 {
  background: #0f172a;
  width: 100%;
  height: 100%;
  position: absolute;
}

input:checked ~ .c4 {
  background: #64748b;
}

.c0:hover input:checked ~ .c4 {
  background: #64748b;
}

.c7 svg {
  width: 16px;
  height: 16px;
  color: transparent;
  z-index: 10;
  position: relative;
}

.c0 input:checked ~ .c6 svg {
  color: #0f172a;
}

.c3 {
  display: none;
}

<div>
  <label
    class="c0 c1"
    disabled=""
  >
    <div
      class="c2"
    >
      <input
        class="c3"
        disabled=""
        type="checkbox"
      />
      <div
        class="c4 c5"
        disabled=""
      />
      <div
        class="c6 c7"
        disabled=""
      >
        <svg
          aria-hidden="true"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.5 12.75 6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
